# tpack

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  RELEASING.md  SECURITY.md  deny.toml  release-plz.toml  typos.toml
.githooks/: README.md  commit-msg  pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  release-plz.yml
crates/tpack/: CHANGELOG.md  Cargo.toml  README.md
crates/tpack-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/tpack-cli/src/: app.rs  cli.rs  inspect.rs  main.rs
crates/tpack-cli/src/app/: command.rs
crates/tpack-cli/src/cli/: parser.rs
crates/tpack-cli/src/inspect/: json.rs  shared.rs  tree.rs
crates/tpack-core/: CHANGELOG.md  Cargo.toml  README.md
crates/tpack-core/src/: codec.rs  error.rs  lib.rs  native.rs  registry.rs  schema.rs  value.rs
crates/tpack-core/src/codec/: encode.rs  validate.rs  wire.rs
crates/tpack-core/src/native/: collections.rs  helpers.rs  primitives.rs  text.rs
crates/tpack-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/tpack-macros/src/: ast.rs  emit.rs  lib.rs  parse.rs  util.rs
crates/tpack/examples/: generate_sample.rs
crates/tpack/src/: lib.rs  serde_support.rs
crates/tpack/src/serde_support/: access.rs  error.rs  value.rs
crates/tpack/tests/: cache_validation.rs  reference.rs  schema_limits.rs  serde_support_depth.rs
docs/: implementation-status.md
drafts/: Makefile  draft-zhang-tpack-format-00.md  draft-zhang-tpack-format-00.txt
scripts/: build-draft.sh  check-msrv.sh
test-vectors/: README.md
test-vectors/v1/draft-00/flat-record/: full-schema-with-id.hex  full-schema.hex  schema-ref.hex
test-vectors/v1/reference/noncanonical-map-order/: full-schema.hex
