[package]
name = "tpack-cli"
description = "Command-line tooling for inspecting and canonicalizing TPACK payloads"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[[bin]]
name = "tpack"
path = "src/main.rs"

[dependencies]
lexopt.workspace = true
tpack = { workspace = true, features = ["std"] }
