[package]
name = "tpack-core"
description = "Core wire codec, schema AST, validation, and native traits for TPACK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[features]
default = []
std = []

[lib]
path = "src/lib.rs"

[dependencies]
sha2 = { version = "0.10", default-features = false }
