[package]
name = "tpack-macros"
description = "Procedural macros for native TPACK schema binding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
