[package]
name = "tpack"
description = "Std facade, registry integration, and optional serde support for TPACK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[features]
default = ["std", "derive"]
std = ["tpack-core/std"]
derive = ["dep:tpack-macros"]
serde_support = ["std", "dep:serde"]

[dependencies]
tpack-core.workspace = true
xxhash-rust = { version = "0.8.15", default-features = false, features = ["xxh64"] }
tpack-macros = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tpack-macros.workspace = true
